# MicroFastApiTodoWebApp

./: .gitignore  Dockerfile  README.md  compose.yaml  json.json  pyproject.toml
.github/workflows/: version-bump.yaml
src/frontend/: package-lock.json  package.json  style.css
src/microfastapitodowebapp/: __init__.py  main.py
src/microfastapitodowebapp/config/: configuration.py  context.py  jinja.py  logging.py  middleware.py  oauth.py  valkey.py
src/microfastapitodowebapp/domain/: priority.py  query.py
src/microfastapitodowebapp/model/: page_info.py  todo.py  todo_form_data.py  todo_request.py  todo_response.py
src/microfastapitodowebapp/router/: auth.py  dashboard.py  landing.py
src/microfastapitodowebapp/service/: share.py  statistics.py  todo.py
src/microfastapitodowebapp/util/: todo_form_helper.py  url_helper.py
src/resources/templates/: base.html  dashboard.html  landing.html
src/resources/templates/components/: _drawer.html  _header.html  _macros.html  _nav_link.html  _navbar.html
src/resources/templates/dashboard/: content.html  index.html
src/resources/templates/partials/: _dashboard_todo_content.html  _drawer_content.html  _toast.html  _todo_list.html  _todo_statistics.html
