[project]
name = "microfastapitodowebapp"
version = "1.0.3"
description = "Micro FastAPI Todo Web App"
readme = "README.md"
authors = [
    { name = "robotTX", email = "robottx3@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.5",
    "fastapi[standard]>=0.121.3",
    "httpx>=0.28.1",
    "jinja2-fragments>=1.11.0",
    "loguru>=0.7.3",
    "oci>=2.164.0",
    "starsessions[redis]>=2.2.1",
]

[project.scripts]
microfastapitodowebapp = "microfastapitodowebapp:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.bumpversion]
current_version = "1.0.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "chore: bump version to {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"